// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gitt at AnchorLink skal rendres > Gitt at AnchorLink skal vises med className og id > Så rendres AnchorLink riktig 1`] = `
<div>
  <a
    class="anchorlink custom-classname"
    data-analyticsid="anchor-link"
    id="custom-id"
    target="_self"
  >
    AnchorLink
  </a>
</div>
`;

exports[`Gitt at AnchorLink skal rendres > Gitt at AnchorLink skal vises som external > Så rendres AnchorLink riktig 1`] = `
<div>
  <a
    class="anchorlink"
    data-analyticsid="anchor-link"
    rel="noopener noreferrer"
    target="_blank"
  >
    AnchorLink external
    <svg
      aria-hidden="true"
      class="hnds-style-icon anchorlink__icon"
      data-analyticsid="icon"
      fill="#126F87"
      focusable="false"
      height="38"
      role="presentation"
      style="min-width: 38px; min-height: 38px;"
      viewBox="0 0 48 48"
      width="38"
    >
      <path
        d="M18.76 14.426v1.768h11.83L14.719 32.065l1.251 1.25 15.801-15.801v11.691h1.768V14.426z"
      />
    </svg>
  </a>
</div>
`;

exports[`Gitt at AnchorLink skal rendres > Gitt at AnchorLink skal vises vanlig > Så rendres AnchorLink riktig 1`] = `
<div>
  <a
    class="anchorlink"
    data-analyticsid="anchor-link"
    target="_self"
  >
    AnchorLink
  </a>
</div>
`;
